Mon Jul 31 10:24:35 BST 2006 (njh)
----------------------------------
  * libclamav/pdf.c, binhex.c:	Fixed compilation error under MSVC

Sun Jul 30 14:15:33 BST 2006 (njh)
----------------------------------
  * libclamav/message.c:	Improved handling of characters with the top
			bit set

Sun Jul 30 11:09:22 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Fixed (remote possibility) memory leak, reported
				by Torok Edvin <edwintorok*gmail.com>

Sun Jul 30 08:35:49 BST 2006 (njh)
---------------------------------
  * docs/man/clamav-milter.8:	Fix formatting errors and a typo

Fri Jul 28 19:47:39 CEST 2006 (tk)
----------------------------------
  * libclamav: fix a couple of typos in debug messages spotted by NJH

Fri Jul 28 01:08:01 CEST 2006 (tk)
----------------------------------
  * freshclam/manager.c: delete patch after applying

Fri Jul 28 00:32:31 CEST 2006 (tk)
----------------------------------
  * freshclam/manager.c: better handling of status codes from remote servers
			 Thanks to Luca and Nigel

Thu Jul 27 14:21:01 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: --build: automatically create and verify cdiff file
		       --unpack-current, --verify-cdiff: add support for
			 incremental directories

Thu Jul 27 14:18:57 CEST 2006 (tk)
----------------------------------
  * shared/misc.c: add dircopy()

Wed Jul 26 17:00:59 CEST 2006 (tk)
----------------------------------
  * libclamav/readdb.c: add support for incremental directories

Tue Jul 25 18:33:06 CEST 2006 (tk)
----------------------------------
  * libclamav/cvd.c: handle .info files

Tue Jul 25 08:30:12 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Mention Castlecops in report-phish
			Added sanity checks

Mon Jul 24 21:05:20 CEST 2006 (tk)
----------------------------------
  * shared/cdiff.c: add missing fclose() in cdiff_cmd_close()

Mon Jul 24 13:13:35 BST 2006 (njh)
----------------------------------