@@ -314,7 +314,7 @@ int unspin(char *src, int ssize, struct pe_image_section_hdr *sections, int sect
   memcpy(spinned, src + EC32(sections[sectcnt].PointerToRawData), EC32(sections[sectcnt].SizeOfRawData)); 
   ep = spinned + nep - sections[sectcnt].VirtualAddress;
 
-  curr = ep+0xdb; /* HELP: as a general rule, can i do char* math or should use monsters like "&ep[0xdb]" instead? */
+  curr = ep+0xdb;
   if ( *curr != '\xbb' ) {
     free(spinned);
     cli_dbgmsg("spin: Not spinned or bad version\n");
@@ -337,12 +337,11 @@ int unspin(char *src, int ssize, struct pe_image_section_hdr *sections, int sect
 
   cli_dbgmsg("spin: Key8 is %x, Len is %x\n", key8, len);
 
-  if ( (uint32_t)(ep - spinned) >= EC32(sections[sectcnt].SizeOfRawData) - len - 0x1fe5 ) {
+  if (!CLI_ISCONTAINED(spinned, EC32(sections[sectcnt].SizeOfRawData), ep, len+0x1fe5-1)) {
     free(spinned);
     cli_dbgmsg("spin: len out of bounds, giving up\n");
-    return 1; /* Outta bounds - HELP: i suppose i should check for wraps.. not sure though */
+    return 1;
   }
-
 
   if ( ep[0x1e0]!='\xb8' )
     cli_dbgmsg("spin: prolly not spinned, expect failure\n");
@@ -350,11 +349,16 @@ int unspin(char *src, int ssize, struct pe_image_section_hdr *sections, int sect
   if ( (cli_readint32(ep+0x1e1) & 0x00200000) )
     cli_dbgmsg("spin: password protected, expect failure\n");
 
-
   curr = ep+0x1fe5+len-1;
   while ( len-- ) {
     *curr=(*curr)^(key8--);
     curr--;
+  }
+
+  if (!CLI_ISCONTAINED(spinned, EC32(sections[sectcnt].SizeOfRawData), ep+0x3217, 4)) {
+    free(spinned);
+    cli_dbgmsg("spin: key out of bounds, giving up\n");
+    return 1;
   }
 
   curr = ep+0x26eb;
@@ -365,15 +369,15 @@ int unspin(char *src, int ssize, struct pe_image_section_hdr *sections, int sect
     return 1;
   }
 
-  curr = ep+0x2d5; /* 0x2d5+5a0 < 0x3217 - still within bounds (checked by caller) */
+  curr = ep+0x2d5;
   cli_dbgmsg("spin: Key is %x, Len is %x\n", key32, len);
 
   while ( len-- ) {
     if ( key32 & 1 ) {
-      key32 = key32>>1&0x7fffffff;
+      key32 = key32>>1;
       key32 ^= 0x8c328834;
     } else {
-      key32 = key32>>1 & 0x7fffffff;
+      key32 = key32>>1;
     }
     *curr = *curr ^ (key32 & 0xff);
     curr++;
@@ -383,7 +387,7 @@ int unspin(char *src, int ssize, struct pe_image_section_hdr *sections, int sect
   if ( len >= (uint32_t)ssize ) {
     free(spinned);
     cli_dbgmsg("spin: crc out of bounds, giving up\n");
-    return 1; /* We wrapped */
+    return 1;
   }
   key32 = cli_readint32(ep+0x3217) - summit(src,len);
 
@@ -391,6 +395,10 @@ int unspin(char *src, int ssize, struct pe_image_section_hdr *sections, int sect
   free(spinned); /* done CRC'ing - can have a dirty buffer now */
   ep = src + nep + sections[sectcnt].PointerToRawData - sections[sectcnt].VirtualAddress; /* Fix the helper */
 
+  if (!CLI_ISCONTAINED(src, ssize, ep+0x3207, 4)) { /* this one holds all ep based checks */
+    cli_dbgmsg("spin: key out of bounds, giving up\n");
+    return 1;
+  }
   bitmap = cli_readint32(ep+0x3207);
   cli_dbgmsg("spin: Key32 is %x - XORbitmap is %x\n", key32, bitmap);
   
@@ -402,29 +410,29 @@ int unspin(char *src, int ssize, struct pe_image_section_hdr *sections, int sect
       char *ptr = src + EC32(sections[j].PointerToRawData);
       uint32_t keydup = key32;
       
-      if ( EC32(sections[j].PointerToRawData) + size >=  (uint32_t)ssize ) {
+      if (!CLI_ISCONTAINED(src, ssize, ptr, size)) {
 	cli_dbgmsg("spin: sect %d out of file, giving up\n", j);
-	return 1; /* sect outta bounds - HELP: i suppose i should check for wraps.. not sure though */
+	return 1; /* FIXME: Already checked in pe.c? */
       }
 
       while (size--) {
 	if (! (keydup & 1)) {
-	  keydup = keydup>>1&0x7fffffff; /* HELP: clear sign bit for unsigned values too? */
+	  keydup = keydup>>1;
 	  keydup ^= 0xed43af31;
 	} else {
-	  keydup = keydup>>1 & 0x7fffffff; /* HELP: clear sign bit for unsigned values too? */
+	  keydup = keydup>>1;
 	}
 	*ptr = *ptr ^ (keydup & 0xff);
 	ptr++;
       }
     } 
-    bitmap = bitmap >>1 & 0x7fffffff; /* HELP: clear sign bit for unsigned values too? */
+    bitmap = bitmap >>1;
   }
   
   cli_dbgmsg("spin: done\n");
 
   
-  curr = ep+0x644; /* 0x28d3+0x180 < 0x3217 - still within bounds (checked by caller) */
+  curr = ep+0x644;
   if ( (len = cli_readint32(curr)) != 0x180) {
     cli_dbgmsg("spin: Not spinned or bad version\n");
     return 1;
@@ -434,12 +442,16 @@ int unspin(char *src, int ssize, struct pe_image_section_hdr *sections, int sect
   cli_dbgmsg("spin: Key is %x, Len is %x\n", key32, len);
   curr = ep+0x28d3;
 
+  if (!CLI_ISCONTAINED(src, ssize, curr, len)) { /* always true but i may decide to remove the previous check */
+    cli_dbgmsg("spin: key out of bounds, giving up\n");
+    return 1;
+  }
   while ( len-- ) {
     if ( key32 & 1 ) {
-      key32 = key32>>1&0x7fffffff;
+      key32 = key32>>1;
       key32 ^= 0xed43af32;
     } else {
-      key32 = key32>>1 & 0x7fffffff;
+      key32 = key32>>1;
     }
     *curr = *curr ^ (key32 & 0xff);
     curr++;
@@ -454,8 +466,11 @@ int unspin(char *src, int ssize, struct pe_image_section_hdr *sections, int sect
 
   cli_dbgmsg("spin: POLY1 len is %x\n", len);
   curr+=0xf; /* POLY1 */
-  emu = ep+0x6d4; /* Still within bounds */
-
+  emu = ep+0x6d4;
+  if (!CLI_ISCONTAINED(src, ssize, emu, len)) {
+    cli_dbgmsg("spin: poly1 out of bounds\n");
+    return 1;
+  }
   while (len) {
     *emu=exec86(*emu, len-- & 0xff, curr); /* unlame POLY1 */
     emu++;
@@ -472,8 +487,8 @@ int unspin(char *src, int ssize, struct pe_image_section_hdr *sections, int sect
 
       emu = src + EC32(sections[j].PointerToRawData);
 
-      if ( emu < src || EC32(sections[j].PointerToRawData) + notthesamelen >= (uint32_t)ssize) { /* HELP: Is this enough for me to be within bounds? */
-	cli_dbgmsg("spin: code to exec is out of file?\n");
+      if (!CLI_ISCONTAINED(src,ssize,curr,0x24)) { /* section bounds already checked twice now */
+	cli_dbgmsg("spin: poly1 emucode is out of file?\n");
 	return 1;
       }
 
@@ -482,7 +497,7 @@ int unspin(char *src, int ssize, struct pe_image_section_hdr *sections, int sect
         emu++;
       }
     }
-      bitmap = bitmap >>1 & 0x7fffffff;
+      bitmap = bitmap >>1;
   }
   
   cli_dbgmsg("spin: done\n");
@@ -496,7 +511,7 @@ int unspin(char *src, int ssize, struct pe_image_section_hdr *sections, int sect
   len = 0;
   for (j=0; j<sectcnt; j++) {
     if (bitmap&1) {
-       if ( (sects[j] = (char *) cli_malloc(EC32(sections[j].VirtualSize)) ) == NULL ) { /* FIXME: use "static" maxmalloc @4380b6 instead??? */
+       if ( (sects[j] = (char *) cli_malloc(EC32(sections[j].VirtualSize)) ) == NULL ) {
 	 cli_dbgmsg("spin: malloc(%d) failed\n", EC32(sections[j].VirtualSize));
 	 len = 1;
 	 break;
@@ -508,7 +523,6 @@ int unspin(char *src, int ssize, struct pe_image_section_hdr *sections, int sect
 	 len++;
          cli_dbgmsg("spin: Unpack failure\n");
        }
-       /* sections[j].rsz = sections[j].vsz; FIXME: can't hack the caller, gotta find a better way! */
     } else {
       blobsz+=EC32(sections[j].SizeOfRawData);
       sects[j] = src + EC32(sections[j].PointerToRawData);
@@ -536,7 +550,7 @@ int unspin(char *src, int ssize, struct pe_image_section_hdr *sections, int sect
     /*    len = cli_readint32(ep+0x2fc8); -- Using vsizes instead */
 
     for (j=0; j<sectcnt; j++) {
-      if (EC32(sections[j].VirtualAddress) <= key32 && EC32(sections[j].VirtualAddress)+EC32(sections[j].SizeOfRawData) > key32) /* HELP: wraps? */
+      if (EC32(sections[j].VirtualAddress) <= key32 && EC32(sections[j].VirtualAddress)+EC32(sections[j].SizeOfRawData) > key32)
 	break;
     }
 
@@ -546,19 +560,19 @@ int unspin(char *src, int ssize, struct pe_image_section_hdr *sections, int sect
       if ( (curr=(char *)cli_malloc(EC32(sections[j].VirtualSize))) != NULL ) {
 	memcpy(curr, src + EC32(sections[j].PointerToRawData), key32 - EC32(sections[j].VirtualAddress)); /* Uncompressed part */
 	memset(curr + key32 - EC32(sections[j].VirtualAddress), 0, EC32(sections[j].VirtualSize) - (key32 - EC32(sections[j].VirtualAddress))); /* bzero */
-	if ( unfsg(src + EC32(sections[j].PointerToRawData) + key32 - EC32(sections[j].VirtualAddress), curr + key32 - EC32(sections[j].VirtualAddress), EC32(sections[j].SizeOfRawData) - (key32 - EC32(sections[j].VirtualAddress)), EC32(sections[j].VirtualSize) - (key32 - EC32(sections[j].VirtualAddress))) ) { /* HELP: i can't read my own line - hope's ok :( */
+	if ( unfsg(src + EC32(sections[j].PointerToRawData) + key32 - EC32(sections[j].VirtualAddress), curr + key32 - EC32(sections[j].VirtualAddress), EC32(sections[j].SizeOfRawData) - (key32 - EC32(sections[j].VirtualAddress)), EC32(sections[j].VirtualSize) - (key32 - EC32(sections[j].VirtualAddress))) ) {
       
 	  free(curr);
 	  cli_dbgmsg("spin: Failed to grow resources, continuing anyway\n");
 	  blobsz+=EC32(sections[j].SizeOfRawData);
 	} else {
-	  sects[j]=curr; /* FIXME: bitman check above should save me from leaks */
+	  sects[j]=curr;
 	  bitman|=1<<j;
 	  cli_dbgmsg("spin: Resources grown\n");
 	  blobsz+=EC32(sections[j].VirtualSize);
 	}
       } else {
-	/* HELP: malloc failed but i'm too deep into this crap to worry... what to do next? */
+	/* malloc failed but i'm too deep into this crap to quit without leaking more :( */
 	blobsz+=EC32(sections[j].SizeOfRawData);
       }
     } else {
@@ -584,10 +598,10 @@ int unspin(char *src, int ssize, struct pe_image_section_hdr *sections, int sect
 	memcpy(to, sects[j], rebhlp[j].rsz);
 	to+=rebhlp[j].rsz;
 	if ( bitmap & 1 ) free(sects[j]);
-	bitmap = bitmap >>1 & 0x7fffffff;
+	bitmap = bitmap >>1;
       }
 
-      if ( (to = rebuildpe(ep, rebhlp, sectcnt, 0x400000, 0x1000, 0, 0))) { /* HELP: should i bother fixing those values? the rebuilt exe is completely broken anyway. */
+      if ( (to = rebuildpe(ep, rebhlp, sectcnt, 0x400000, 0x1000, 0, 0))) { /* can't be bothered fixing those values: the rebuilt exe is completely broken anyway. */
 	if (cli_writen(desc, to, 0x148+0x80+0x28*j+rebhlp[j-1].raw+rebhlp[j-1].rsz)==-1) {
 	  cli_dbgmsg("spin: Cannot write unpacked file\n");
 	  retval = 1;
