@@ -1,3 +1,7 @@
+Mon Jul 31 12:59:30 CEST 2006 (acab)
+------------------------------------
+  * libclamav: packers review
+
 Mon Jul 31 10:24:35 BST 2006 (njh)
 ----------------------------------
   * libclamav/pdf.c, binhex.c:	Fixed compilation error under MSVC
